# otus-cpp-prof-2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ip_filter.cpp  main.cpp  test_version.cpp  training_1.cpp
.github/workflows/: release.yml
google_tests/: tests.cpp
src/: 00_problem.cpp  01_basic_case.cpp  01_simple_smart_ptr.h  02_basic_case.cpp  02_simple_shared_ptr.h  03_minimal_weak_main.cpp  03_minimal_weak_ptr.h  ip_filter.cpp  ip_filter.h  ip_filter_lib.cpp  memory_types.cpp  move.cpp  version_lib.cpp  vt.cpp
